--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "http://songroger.github.io/" # the base hostname & protocol for your site
 permalink: /:title/
 avatar: http://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
 about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
-
+favicon: http://7xof48.com1.z0.glb.clouddn.com/favicon.png
 # Theme specific configuration
 title: songroger
 description: >
