--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pawelgrzybek.com",
-  "version": "2.0.0",
-  "description": "My Jekyll based website pawelgrzybek.com",
-  "author": "Pawel Grzybek",
+  "name": "songroger.win",
+  "version": "1.0.0",
+  "description": "powered by jekyll",
+  "author": "songroger",
   "keywords": [
     "css",
     "gulp",
@@ -14,9 +14,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pawelgrzybek/pawelgrzybek.github.io"
+    "url": "https://github.com/songroger/songroger.github.io"
   },
-  "homepage": "https://pawelgrzybek.com",
+  "homepage": "https://songroger.github.io",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "browser-sync": "2.12.12",
