--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site configuration
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://songroger.github.io/" # the base hostname & protocol for your site
+url: "http://songroger.win" # the base hostname & protocol for your site
 permalink: /:title/
 avatar: http://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
 about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
