--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://songroger.win" # the base hostname & protocol for your site
 permalink: /:title/
-avatar: http://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
-about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
-favicon: http://7xof48.com1.z0.glb.clouddn.com/favicon.png
-basecss: http://7xof48.com1.z0.glb.clouddn.com/songroger/main.min.css
+avatar: https://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
+about: https://7xof48.com1.z0.glb.clouddn.com/about.jpg
+favicon: https://7xof48.com1.z0.glb.clouddn.com/favicon.png
+basecss: https://7xof48.com1.z0.glb.clouddn.com/songroger/main.min.css
 # Theme specific configuration
 title: songroger
 description: >
