--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description: >
   Hi there, My name is Luozhan.Song, usually I use "songroger" as my ID everywhere.
   I was born and raised in Hunan China. 
   I'm really fond of beautiful design, drawing etc.
+keywords: songroger,github
 
 # Contact and social media links
 twitter_username: songrogero
