--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:title/
 avatar: http://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
 about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
 favicon: http://7xof48.com1.z0.glb.clouddn.com/favicon.png
-basecss: http://7xof48.com1.z0.glb.clouddn.com/songroger/main.min.css
+# basecss: http://7xof48.com1.z0.glb.clouddn.com/songroger/main.min.css
 # Theme specific configuration
 title: songroger
 description: >
@@ -50,5 +50,5 @@ kramdown:
 gems: ['jekyll-paginate']
 
 # Pagination
-paginate: 5
+paginate: 7
 paginate_path: /archive/page:num
