--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://songroger.win" # the base hostname & protocol for your site
 permalink: /:title/
-avatar: http://7xof48.com1.z0.glb.clouddn.com/avatar.jpg
-about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
-favicon: http://7xof48.com1.z0.glb.clouddn.com/favicon.png
+avatar: /photos/avatar.jpg
+about: /photos/about.jpg
+favicon: /assets/favicon.png
 # basecss: http://7xof48.com1.z0.glb.clouddn.com/songroger/main.min.css
 # Theme specific configuration
 title: songroger
